Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3314

failed to check ".lustre" for the MDT upgraded from Lustre-2.x (x <= 3)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 8202

      For lustre-2.x (x <= 3), the ".lustre" object has NO FID-in-LMA, so the client will get IGIF for the ".lustre" object when the MDT restart. From the OI scrub view, when the MDT upgrade to Lustre-2.4, it does not know whether there are some alive clients have cached ".lustre" IGIF during the upgrading, so it has to generate IGIF-in-LMA and IGIF-in-OI for ".lustre" object. It will cause the others on the MDT failed to check "fid_is_dot_lustre()".

      static inline int fid_is_dot_lustre(const struct lu_fid *fid)
      {
              return unlikely(fid_seq(fid) == FID_SEQ_DOT_LUSTRE &&
                              fid_oid(fid) == FID_OID_DOT_LUSTRE);
      }
      

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: